<resources>
    <string name="app_name">ACT3_Radio Button</string>
    <string name="Genshin_Impact_Characters">Genshin Impact Characters</string>

    <string name="Amber">Amber</string>
    <string name="Eula">Eula</string>
    <string name="Chongyun">Chongyun</string>
    <string name="Hu_Tao">Hu Tao</string>
    <string name="Gorou">Gorou</string>
    <string name="Yoimiya">Yoimiya</string>
    <string name="Cyno">Cyno</string>
    <string name="Nahida">Nahida</string>

    <string name="ThemeOne">Mondstadt</string>
    <string name="ThemeTwo">Inazuma</string>
    <string name="ThemeThree">Sumeru</string>


</resources>