<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundImg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/liyue"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Genshin_Impact_Characters"
        android:textColor="#FFFD8C"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/gordon" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Release Date"
        android:shadowColor="#000000"
        android:textColor="#FFB84C"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <!-- Title -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleChar"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="Title:"
            android:textColor="#FFEA20"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/titleDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFEA20"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <!-- Name -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameChar"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="Name:"
            android:textColor="#FFEA20"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nameDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFEA20"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <!-- Element -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/element"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="Element:"
            android:textColor="#FFEA20"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/elementDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFEA20"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <!-- Weapon -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/weapon"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="Weapon:"
            android:textColor="#FFEA20"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/weaponDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFEA20"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <!-- Region -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/region"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="Region:"
            android:textColor="#FFEA20"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/regionDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFEA20"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <CheckBox
            android:id="@+id/amberBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="#FF8D29"
            android:text="@string/Amber"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/eulaBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Eula"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chongyunBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Chongyun"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/hutaoBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Hu_Tao"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <CheckBox
            android:id="@+id/gorouBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Gorou"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/yoimiyaBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Yoimiya"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cynoBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cyno"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/nahidaBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Nahida"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/themeOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:text="@string/ThemeOne"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/themeTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/ThemeTwo"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/themeThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:text="@string/ThemeThree"
            android:textColor="#1CD6CE"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>